src/objects/DRE__DRESettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls behaviour of DRE</description>
    <fields>
        <fullName>DRE__IsAutoBulk__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected DRE will automatically process records in separate batches. Doing so can increase system robustness at the cost of losing real-time feedback. Enable this setting if your organization contains complex automation processes</description>
        <inlineHelpText>If selected DRE will automatically process records in separate batches. Doing so can increase system robustness at the cost of losing real-time feedback. Enable this setting if your organization contains complex automation processes</inlineHelpText>
        <label>Enable Auto-Bulk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__IsBatchLogging__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected creates log records for DRE batch rules in the DRE Event Log table</description>
        <inlineHelpText>If selected creates log records for DRE batch rules in the DRE Event Log table</inlineHelpText>
        <label>Enable Batch Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__IsDebugMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected DRE will display more detailed error messages (not user friendly)</description>
        <label>Enable Debug Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__IsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable DRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__IsLogging__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected creates log records for DRE events in the DRE Event Log table</description>
        <inlineHelpText>If selected creates log records for DRE events in the DRE Event Log table</inlineHelpText>
        <label>Enable Event Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Suppress_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected all DRE errors will be suppressed and logged in the DRE Event Log table, thereby preventing users from receiving real-time feedback when error occurs</description>
        <inlineHelpText>If selected all DRE errors will be suppressed and logged in the DRE Event Log table, thereby preventing users from receiving real-time feedback when error occurs</inlineHelpText>
        <label>Suppress Errors</label>
        <type>Checkbox</type>
    </fields>
    <label>DRE Settings</label>
</CustomObject>